# django_projects

./: pyproject.toml
it_prog/: manage.py  pyproject.toml
it_prog/it_prog/: asgi.py  settings.py  urls.py  wsgi.py
it_prog/main/: views.py
